# GUHypro-tjet

./: CMakeLists.txt  FindCANTERA.cmake  FindSundials.cmake  FindYamlCpp.cmake  KERO_DAGAUT.cti  README.md  putHeader.sh
Doc/: Doxyfile.in  Makefile
Matlab/: runMatlab.sh
Matlab/src/: Makefile  propModule.m  systemModule.m  systemModuleMex.cpp
googletest/: CMakeLists.txt  googletest.cpp  testCFD.cpp
googletest/GP/: testGP.cpp  testHyperion.cpp  testSCRAMSPACE.cpp  testSTATALTEXRamjet.cpp
src/: Fanno.cpp  Fanno.h  InfNanFloat.cpp  InfNanFloat.h  Mixer.cpp  Mixer.h  NeutralLink.cpp  NeutralLink.h  ParMixer.cpp  ParMixer.h  PropModule3.cpp  PropModule3.h  Rocket.cpp  Rocket.h  TermModule.cpp  TermModule.h  US76.cpp  US76.h  Wedge.cpp  Wedge.h  simpleSplitter.cpp  simpleSplitter.h  typedefs.h
src/Graphics/: CollGraph.cpp  CollGraph.h  ModuleGraph.cpp  ModuleGraph.h  ModuleGraph3.cpp  ModuleGraph3.h  NodeGraph.cpp  NodeGraph.h  SystemGraph.cpp  SystemGraph.h  examplewindow.cc  examplewindow.h
src/combustion/: Combustion.cpp  Combustion.h  CombustionReactor.cpp  CombustionReactor.h  EffComb.cpp  EffComb.h  EffPhiComb.cpp  EffPhiComb.h  EquilCombustion.cpp  EquilCombustion.h
src/core/: Collection.cpp  Collection.h  FeedBack.cpp  FeedBack.h  MultiMode.cpp  MultiMode.h  MultiModeMach.cpp  MultiModeMach.h  MultiModeMachP0.cpp  MultiModeMachP0.h  Node.cpp  Node.h  mixerModule.cpp  mixerModule.h  propModule.cpp  propModule.h  splitterModule.cpp  splitterModule.h  systemModule.cpp  systemModule.h
src/gasTurbine/: Compressor.cpp  Compressor.h  Turbine.cpp  Turbine.h  TurbineBleed.cpp  TurbineBleed.h  mechanicalLink.cpp  mechanicalLink.h
src/injectors/: InjectionPhi.cpp  InjectionPhi.h  InjectionPhiNoTemp.cpp  InjectionPhiNoTemp.h  InjectionPlate.cpp  InjectionPlate.h  InjectionPlatePressure.cpp  InjectionPlatePressure.h  injection.cpp  injection.h
src/inletModels/: AdaptedInlet.cpp  AdaptedInlet.h  AdaptedThroatInlet.cpp  AdaptedThroatInlet.h  CentrBodyFixedInlet.cpp  CentrBodyFixedInlet.h  ClosedInlet.cpp  ClosedInlet.h  (+12 more)
test/: CMakeLists.txt
test/CFASTT1/: CFASTT1.cpp  CMakeLists.txt
test/CFASTT1/Resources/: CFASTT1old.m
test/CFD/: CFD.h  CMakeLists.txt
test/CFD/Resources/: SERJ.m
test/CFD/cpp/: CFD.cpp
test/CFD/matlab/: CFD.cpp  Makefile
test/Chiara/: CMakeLists.txt  Chiara.h
test/Chiara/cpp/: Chiara.cpp
test/Enthalpy/: CMakeLists.txt  airNASA9.xml  gri30_highT_modified_jetA.xml  nasa.xml
test/Enthalpy/cpp/: Enthalpy.cpp  EnthalpyArchive.cpp
test/GP/: CMakeLists.txt  GP.h  airNASA9.xml
test/GP/cpp/: GP.cpp  plotGP.py
test/GP/resources/: GPstat.m  GPstatLoop.m  genLopp.sh
test/GP/resources/subsonic/: GP.ini
test/GP/resources/supersonic/: GP.ini
test/HPLPTurboJet/: CMakeLists.txt  HPLPTurboJet.h
test/HPLPTurboJet/cpp/: HPLPTurboJet.cpp
test/HPPMM_test/: CMakeLists.txt
test/Hyperion/: CMakeLists.txt  Hyperion.h  gri30_highT.xml  gri30_highT2.xml
test/Hyperion/cpp/: Hyperion.cpp
test/HyperionExpanded/: CMakeLists.txt  HyperionExpanded.h  pypro.cpp
test/HyperionExpanded/Resources/: CorrelationEjector.m  CorrelationRamjet.m  Hyperion.hyp  HyperionLoop.m  HyperionLoopRam.m  HyperionPlot.m  HyperionRamjet.hyp  Hyperion_traj.csv  SCCREAM_verif.m  SCCREAM_verif_Ct.csv  SCCREAM_verif_Isp.csv
test/HyperionExpanded/cpp/: HyperionExpanded.cpp
test/HyperionExpanded/matlab/: Hyperion.cpp  Hyperionmex.m
test/HyperionExpanded/python/: Hyperion.cpp
test/MarquardtRamjet/: CMakeLists.txt  MarquardtRamjet.cpp
test/Np3/: CMakeLists.txt  Np3.h  gri30_highT_modified_jetA.xml  gri30_highT_modified_jetA.yaml
test/Np3/cpp/: Np3.cpp
test/OpenModel/: CMakeLists.txt  OpenModel.cpp
test/OpenModelHyperion/: CMakeLists.txt  OpenModelHyperion.cpp
test/PipeFlow/: CMakeLists.txt  PipeFlow.cpp
test/Rocket_test/: CMakeLists.txt  JetSurf.cti  Rocket_test.h  UCSD_officiel.cti  gri30_highT.cti  gri30_highT_rocket.cti
test/Rocket_test/cpp/: Rocket_test.cpp
test/SCRAMSPACE/: CMakeLists.txt  SCRAMSPACE.h
test/SCRAMSPACE/Resources/: LorrainCFD.csv  SCRAMSPACEplot.m
test/SCRAMSPACE/cpp/: SCRAMSPACE.cpp
test/SCRAMSPACE/matlab/: Makefile  SCRAMSPACE.cpp
test/STATALTEXRamjet/: CMakeLists.txt  STATALTEXRamjet.h
test/STATALTEXRamjet/cpp/: STATALTEXRamjet.cpp
test/STATALTEXRamjet/matlab/: Makefile  STATALTEXRamjet.cpp
test/STATALTEXRamjet/resources/: InternalPress.csv  Isp.csv  STLTX_CEA_1st_JULY_in  STLTX_CEA_1st_JULY_out  STX05TrajZM.csv  STX06TrajZM.csv  STX09TrajZM.csv  STXLoop.m  Thrust.csv  Traj_V_time.csv  Traj_Z_M.csv  Traj_Z_S.csv  gri30_highT_modified_jetA.xml
test/Scramjet/: CMakeLists.txt  Scramjet.cpp
test/Serialization/: Serialization.h
test/TrajOpt/: CMakeLists.txt  TrajOpt.h
test/TrajOpt/cpp/: TrajOpt.cpp
test/TurboFan/: CMakeLists.txt  TurboFan.cpp  TurboFan.h
test/TurboJet/: CMakeCache.txt  CMakeLists.txt  Makefile  TurboJet.h  cmake_install.cmake  gri30_highT_modified_jetA.yaml  turbojet_hydrocarbon.cti
test/TurboJet/cpp/: TurboJet.cpp
test/jsontest/: CMakeLists.txt
test/jsontest/cpp/: testJson.cpp
test/memleaktest/: CMakeLists.txt
test/memleaktest/cpp/: memleaktest.cpp
test/pyCycleTjetComparison/: CMakeLists.txt  pyCycleTjetComparison.h
test/pyCycleTjetComparison/cpp/: pyCycleTjetComparison.cpp
test/pyCycleTjetMatching/: CMakeLists.txt  airNASA9.xml  airNASA9_modified (copy).yaml  airNASA9_modified.yaml  pyCycleTjetMatching.h
test/pyCycleTjetMatching/cpp/: pyCycleTjetMatching.cpp
test/reactor_test/: CMakeLists.txt  reactor_test.h
test/reactor_test/cpp/: reactor_test.cpp
test/scramjet_combustors/Burrows/: gri30_highT.xml
test/scramjet_combustors/Burrows/cpp/: burrows.cpp
test/scramjet_combustors/Lorrain/: CMakeLists.txt  lorrain.h
test/scramjet_combustors/Lorrain/cpp/: lorrain.cpp
test/scramjet_combustors/TotalT/: BK_EDM_averages_len.csv  BK_averages_len.csv  CMakeLists.txt  nasa.xml  plop.csv  totalT  totalT.h
test/scramjet_combustors/TotalT/cpp/: totalT.cpp
test/scramjet_combustors/lapcat24/: CMakeLists.txt  lapcat24.h
test/scramjet_combustors/lapcat24/cpp/: lapcat24.cpp
(+54 files in other folders)
